--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
-    "ethers": "^5.7.1",
-    "hardhat": "^2.11.2"
+    "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "dotenv": "^16.0.2",
+    "hardhat": "^2.11.2",
+    "prompt": "^1.3.0",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
@@ -16,7 +19,9 @@
     "@typechain/hardhat": "^6.1.3",
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
+    "@types/prompt": "^1.1.3",
     "chai": "^4.3.6",
+    "ethers": "^5.7.1",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
